[package]
name = "hotkey-rs"
version = "0.1.2"
edition = "2021"
authors = ["LucaXiang<luca.xiang@outlook.com>"]
repository = "https://github.com/LucaXiang/hotkey-rs"
documentation = "https://docs.rs/msw-hotkey"
description = "hotkey parser/transformer"
license = "MIT OR Apache-2.0"
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "examples/**/*"
]
categories = ["parsing","os","accessibility"]
keywords = ["hotkey","shortcutkey","hotkey_parser", "hotkey_transformer"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
