[package]
name = "hotkey-rs"
version = "0.1.2"
edition = "2021"
authors = ["LucaXiang<luca.xiang@outlook.com>"]
repository = "https://github.com/LucaXiang/hotkey-rs"
documentation = "https://docs.rs/msw-hotkey"
description = "hotkey parser/transformer"
license = "MIT OR Apache-2.0"
include = ["src/**/*", "Cargo.toml", "LICENSE*", "README.md", "examples/**/*"]
categories = ["parsing", "os", "accessibility"]
keywords = ["hotkey", "shortcutkey", "hotkey_parser", "hotkey_transformer"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"




[target."cfg(target_os =\"windows\")".dev-dependencies]
windows = { version = "0.42.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse"] }


[target."cfg(target_os =\"linux\")".dev-dependencies]
x11-dl = "2.20.0"

[[example]]
name = "windows"
path = "examples/windows/main.rs"

[[example]]
name = "linux"
path = "examples/linux/main.rs"

[[example]]
name = "darwin"
path = "examples/darwin/main.rs"
